# PPRO_TEST

./: .gitignore  Dockerfile  README.md  beetween-messages.sh  init-mongo.js  local.yml  pyproject.toml  requirements.txt
src/: main.py
src/domain/entities/: base.py  email_file.py  file_data.py
src/infra/configs/: local.py
src/infra/database/: mongo.py
src/router/: file_router.py
src/tests/unit/: conftest.py  invalid input  test_file.py  test_router_file.py  valid_input
src/utils/: file_utils.py
