[tool.poetry]
name = "ppro"
version = "0.1.0"
description = ""
authors = ["Raphael Miranda <raphael.miranda75@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
beanie = "^1.27.0"
python-multipart = "^0.0.17"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"
pydantic-settings = "^2.6.1"
asyncmock = "^0.4.2"
httpx = "^0.27.2"
mongomock-motor = "^0.0.34"
debugpy = "^1.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
